# vs-research_crew

./: .env.openrouter.example  README.md  pyproject.toml  verify_sha256.py
my_agents/: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
my_agents/docs/plans/: 2026-04-02-research-quality-overhaul-design.md  2026-04-02-research-quality-overhaul.md
my_agents/sample_briefs/: 01_d2c_snack.yaml  02_deeptech_drones.yaml  03_fintech_lending.yaml  04_healthtech_ai.yaml  05_edtech_bootcamp.yaml
my_agents/src/my_agents/: __init__.py  configuration.py  controller.py  crew.py  evidence.py  html_utils.py  llm_policy.py  main.py  pdf_export.py  report_standards.py  runner.py  schemas.py
my_agents/src/my_agents/config/: agents.yaml  integrations.yaml  llm.yaml
my_agents/src/my_agents/config/output_profiles/: full_report.yaml  (+2 more)
my_agents/src/my_agents/evals/: __init__.py  judge.py  report_renderer.py
my_agents/src/my_agents/integrations/: __init__.py  linear_push.py
my_agents/src/my_agents/renderers/: __init__.py  full_report_renderer.py  ic_memo_renderer.py  one_pager_renderer.py
my_agents/src/my_agents/tools/: __init__.py  custom_tool.py  document_download_tool.py  rag_tool.py  tavily_tool.py
my_agents/tests/: benchmark_configuration.py  conftest.py  test_configuration.py  test_controller_flow.py  test_controller_normalization.py  test_e2e_smoke.py  test_eval_benchmarks.py  test_quick_mode.py  test_rag_tool.py  test_renderers.py  test_report_standards.py  test_runner.py  test_sector_coverage.py  test_tavily_tool.py  test_tools.py
(+43 files in other folders)
